fix plane canvas height in the blog on mobile

--- a/django-website/wheelie/client/scss/layout/blog/_blog_header.scss
+++ b/django-website/wheelie/client/scss/layout/blog/_blog_header.scss
@@ -24,7 +24,7 @@
   width: 100%;
 
   @media #{$small}, #{$medium} {
-    height: 250px;
+    height: 150px;
   }
 }
 
